# meta-rl-dsa-solver

./: .dockerignore  .gitignore  BLOG.md  CODEBASE_STRUCTURE_MAIN_V5.md  Dockerfile  README.md  TRAINING_EVIDENCE.md  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test.py
artifacts/: results_summary.json  training_status_snapshot.json
env/: __init__.py  adapt_env.py  app.py  dataset_loader.py  executor.py  generator.py  test_cases.py
notebooks/: colab_kaggle_smoke_train.ipynb
scripts/: deploy_and_smoke_train.py  test_dataset_mode.py  test_env.py  test_space_api.py  test_trace_logging.py  test_training_config.py  test_verifier.py
server/: app.py  requirements.txt  runtime.py
training/: __init__.py  plot_results.py  trace_logging.py  train_grpo.py
verifier/: __init__.py  complexity.py  metrics.py  sandbox.py  verifier.py
