[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-dsa-tutor"
version = "0.2.0"
description = "OpenEnv-compliant adversarial DSA tutor environment for RLVR code generation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gradio>=6.0.0",
    "openenv-core>=0.2.3",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "httpx>=0.28.0",
    "huggingface_hub==0.30.2",
    "transformers==4.48.0",
    "peft==0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
train = [
    "torch==2.11.0",
    "accelerate==1.2.0",
    "trl==0.15.0",
    "unsloth==2026.3.5",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["env", "server", "training", "verifier"]
py-modules = ["app", "client", "models"]
